--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,22 @@
+* {
+  font-family: "Abril Fatface", cursive;
+}
 .navbar {
   background-color: #21325e;
+}
+
+.title-row {
+  text-align: center;
+}
+
+.title {
+  font-size: 50px;
+  font-weight: 600;
+  letter-spacing: 3px;
+}
+
+.start-button-row {
+  text-align: center;
 }
 
 .game-button {
@@ -7,7 +24,7 @@
   width: 150px;
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
   border-radius: 10px;
-  background-color: #21325e;
+  background-color: #b33030;
   cursor: pointer;
   border: 0;
   color: white;
@@ -22,6 +39,10 @@
 
 .game-button:active {
   box-shadow: inset 5px 5px 10px -3px rgba(0, 0, 0, 0.7);
+}
+
+.deck-row {
+  padding-top: 50px;
 }
 
 .card-container {
