--- a/src/index.css
+++ b/src/index.css
@@ -45,6 +45,10 @@
   box-shadow: inset 5px 5px 10px -3px rgba(0, 0, 0, 0.7);
 }
 
+.play-again {
+    text-align: center;
+}
+
 .deck-row {
   padding-top: 50px;
 }
