--- a/src/index.css
+++ b/src/index.css
@@ -61,7 +61,14 @@
   height: 200px;
   width: 150px;
   cursor: pointer;
+  padding: 10px;
 }
+
+.player-card {
+    height: 100px;
+    width: 75px;
+    cursor: pointer;
+  }
 
 .button-container {
   text-align: center;
